--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Grace S. Liu</title>
+<title>Untitled</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -190,7 +190,7 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="mailto:&lt;gsl2116@cumc.columbia.edu&gt;">
+  <a href="mailto:&lt;you@youremail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
@@ -210,29 +210,24 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Grace S. Liu</h1>
+<h1 class="title toc-ignore">Untitled</h1>
 
 </div>
 
 
-<p>Second-year MPH student<br />
-Department of Epidemiology<br />
-Columbia University, Mailman School of Public Health</p>
-<p><img src = "images/PLACEHOLDER" 
-  style="width:75%; display: block; margin-left: auto; margin-right: auto; border: 5px solid"> <br></p>
-<div id="about" class="section level3">
-<h3>About</h3>
-<p>I received a BA in public health, with a concentration in Health Policy and Management, from University of California, Berkeley, in 2014. I am currently a second-year MPH student in Epidemiology at the Mailman School of Public Health at Columbia University.</p>
-<p>I previously worked as a technical research analyst in Global Health Science at University of California, San Francisco, on a number of international projects related to HIV prevention, care, and treatment, as well as for an initiative addressing preterm birth in East Africa. I am primarily interested in “leakages” along the HIV care continuum; maternal, neonatal, and child health; and health systems strengthening.<br />
-<br></p>
-<div id="contact-information" class="section level5">
-<h5>Contact Information</h5>
-<p>Grace Liu<br />
-Email: <a href="mailto:%3Cgsl2116@cumc.columbia.edu%3E">gsl2116@cumc.columbia.edu</a><br />
-Phone: 510.565.6321</p>
-<p><a href="https://www.google.com">Google</a> it.</p>
-<p>Or, link directly to my <a href="about.html">about page</a>.</p>
-<p>This is my <a href="code.html">code page</a>.</p>
+<div id="column" class="section level2" data-width="650">
+<h2>Column</h2>
+<div id="chart-a" class="section level3">
+<h3>Chart A</h3>
+</div>
+</div>
+<div id="column-1" class="section level2" data-width="350">
+<h2>Column</h2>
+<div id="chart-b" class="section level3">
+<h3>Chart B</h3>
+</div>
+<div id="chart-c" class="section level3">
+<h3>Chart C</h3>
 </div>
 </div>
 
