LinkedIn and CV

--- a/index.html
+++ b/index.html
@@ -201,6 +201,12 @@ $(document).ready(function () {
      
   </a>
 </li>
+<li>
+  <a href="https://www.linkedin.com/in/gswliu/">
+    <span class="fa fa-linkedin fa-lg"></span>
+     
+  </a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -228,6 +234,7 @@ Columbia University, Mailman School of Public Health</p>
 <div id="contact-information" class="section level5">
 <h5>Contact Information</h5>
 <p>Grace Liu<br />
+New York, NY<br />
 Email: <a href="mailto:%3Cgsl2116@cumc.columbia.edu%3E">gsl2116@cumc.columbia.edu</a><br />
 Phone: 510.565.6321</p>
 <p><a href="https://www.google.com">Google</a> it.</p>
