Edits to CV and about me

--- a/index.html
+++ b/index.html
@@ -207,6 +207,12 @@ $(document).ready(function () {
      
   </a>
 </li>
+<li>
+  <a href="https://gswliu.github.io/LiuGrace_CV_Sep2018.pdf">
+    <span class="fa fa-glasses fa-lg"></span>
+     
+  </a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -221,9 +227,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>Second-year MPH student<br />
-Department of Epidemiology<br />
-Columbia University, Mailman School of Public Health</p>
+<p>MPH student, Department of Epidemiology Columbia University, Mailman School of Public Health</p>
 <p><img src = "images/PLACEHOLDER" 
   style="width:75%; display: block; margin-left: auto; margin-right: auto; border: 5px solid"> <br></p>
 <div id="about" class="section level3">
@@ -236,10 +240,8 @@ Columbia University, Mailman School of Public Health</p>
 <p>Grace Liu<br />
 New York, NY<br />
 Email: <a href="mailto:%3Cgsl2116@cumc.columbia.edu%3E">gsl2116@cumc.columbia.edu</a><br />
-Phone: 510.565.6321</p>
-<p><a href="https://www.google.com">Google</a> it.</p>
-<p>Or, link directly to my <a href="about.html">about page</a>.</p>
-<p>This is my <a href="code.html">code page</a>.</p>
+Phone: 510.565.6321<br />
+<a href="about.html">About me</a></p>
 </div>
 </div>
 
