About me page updates

--- a/index.html
+++ b/index.html
@@ -227,9 +227,10 @@ $(document).ready(function () {
 </div>
 
 
-<p>MPH student, Department of Epidemiology Columbia University, Mailman School of Public Health</p>
+<p>MPH student, Department of Epidemiology<br />
+Columbia University, Mailman School of Public Health</p>
 <p><img src = "images/PLACEHOLDER" 
-  style="width:75%; display: block; margin-left: auto; margin-right: auto; border: 5px solid"> <br></p>
+  style="width:300px; display: block; margin-left: auto; margin-right: auto; border: 5px solid"> <br></p>
 <div id="about" class="section level3">
 <h3>About</h3>
 <p>I received a BA in public health, with a concentration in Health Policy and Management, from University of California, Berkeley, in 2014. I am currently a second-year MPH student in Epidemiology at the Mailman School of Public Health at Columbia University.</p>
@@ -241,7 +242,7 @@ $(document).ready(function () {
 New York, NY<br />
 Email: <a href="mailto:%3Cgsl2116@cumc.columbia.edu%3E">gsl2116@cumc.columbia.edu</a><br />
 Phone: 510.565.6321<br />
-<a href="about.html">About me</a></p>
+<a href="LiuGrace_CV_Sep2018.pdf">Curriculum Vitae</a></p>
 </div>
 </div>
 
