--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ Columbia University, Mailman School of Public Health</p>
 <div id="about" class="section level3">
 <h3>About</h3>
 <p>I received a BA in public health, with a concentration in Health Policy and Management, from University of California, Berkeley, in 2014. I am currently a second-year MPH student in Epidemiology at the Mailman School of Public Health at Columbia University.</p>
-<p>I previously worked as a technical research analyst in Global Health Science at University of California, San Francisco, on a number of international projects related to HIV prevention, care, and treatment, as well as for an initiative addressing preterm birth in East Africa. I am primarily interested in “leakages” along the HIV care continuum; maternal, neonatal, and child health; and health systems strengthening.<br />
+<p>I previously worked as a technical research analyst in Global Health Science at University of California, San Francisco, on a number of international projects related to HIV prevention, care, and treatment, as well as for an initiative addressing preterm birth in East Africa. I am primarily interested in “leakages” along the HIV care continuum; maternal, neonatal, and child health; health systems strengthening; and implementation science.<br />
 <br></p>
 <div id="contact-information" class="section level5">
 <h5>Contact Information</h5>
