Minor dashboard edits

--- a/README.html
+++ b/README.html
@@ -205,7 +205,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="https://gswliu.github.io/LiuGrace_CV_Sep2018.pdf">
+  <a href="LiuGrace_CV_Sep2018.pdf">
     <span class="fa fa-glasses fa-lg"></span>
      
   </a>
