--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;gsl2116@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -229,7 +232,7 @@ $(document).ready(function () {
 
 <p>MPH student, Department of Epidemiology<br />
 Columbia University, Mailman School of Public Health</p>
-<p><img src = "images/PLACEHOLDER" 
+<p><img src = "Images/GLiu_Headshot.JPG" 
   style="width:300px; display: block; margin-left: auto; margin-right: auto; border: 5px solid"> <br></p>
 <div id="about" class="section level3">
 <h3>About</h3>
