--- a/README.html
+++ b/README.html
@@ -187,6 +187,9 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;gsl2116@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
